# drone_runtime

./: create_aarch64.py  create_arm.py  create_opencl.py  create_x86.py  run_tvm.py  test_server.py  tvm_x86.py
fc_firmware/: CMakeLists.txt  build.sh  calibrate.cpp  firmware.tar  main  main.cpp  model.json  pystuff.py
fc_firmware/include/: LogHighLight.h  comm.h  comms.h  fc.h  findp.h  infer.h  io.h  microtvm_graph_executor.h  motor.h  nav.h  picojson.h  sensor.h  sensors.h
fc_firmware/include/Fusion/: Fusion.h  FusionAhrs.h  FusionAxes.h  FusionCalibration.h  FusionCompass.h  FusionOffset.h
fc_firmware/include/dlpack/: dlpack.h
fc_firmware/include/dshot/: DShot.h
fc_firmware/include/io/: gpio.h  i2c.h  spi.h
fc_firmware/include/sensors/: compass.h  fuse.h  ir.h  ir_api.h  mpu.h  ultra.h
fc_firmware/include/sensors/fuse/: NXPfusion.h  NXPmatrix.h
fc_firmware/include/tvm/: microtvm_graph_executor.h  microtvm_runtime_api.h  minimal_vector.h
fc_firmware/src/: CMakeLists.txt  comms.cpp  fc.cpp  findp.cpp  gps.cpp  infer.cpp  io.cpp  main.cpp  nav.cpp  sensor.cpp  sensors.cpp
fc_firmware/src/Fusion/: FusionAhrs.c  FusionCompass.c  FusionOffset.c
fc_firmware/src/dshot/: DShot.cpp
fc_firmware/src/io/: i2c.cpp  smbus.cpp  spi.cpp
fc_firmware/src/sensors/: CMakeLists.txt  camera.cpp  compass.cpp  fuse.cpp  gps.cpp  ir.cpp  ir_api.cpp  mpu.cpp  sensors.cpp  ultra.cpp
fc_firmware/src/sensors/fuse/: NXPfusion.cpp  (+1 more)
fc_firmware/src/tvm/: microtvm_graph_executor.cpp  microtvm_runtime.cpp  microtvm_runtime_api.cpp  tvm_graph_executor.cpp  tvm_runtime_api.cpp
(+24 files in other folders)
